k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudsensesolution-deployment
  labels:
    app: cloudsensesolution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudsensesolution
  template:
    metadata:
      labels:
        app: cloudsensesolution
    spec:
      containers:
      - name: cloudsensesolution
        image: vivek6899/cloudsensesolution:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cloudsensesolution-service
spec:
  selector:
    app: cloudsensesolution
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
  - protocol: TCP
    name: TCP
    port: 80
    targetPort: 80  
  type: LoadBalancer
