k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rule-cloudsensesolution
  annotations:
    #nginx.ingress.kubernetes.io/auth-type: basic
    #nginx.ingress.kubernetes.io/auth-secret: basic-auth
    #nginx.ingress.kubernetes.io/auth-realm: "Authentication Required - Trino UI"    
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  rules:
  - host: "cloudsensesolution.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cloudsensesolution-service
            port:
              number: 80
  tls:
  - hosts:
      - cloudsensesolution.com
    secretName: cloudsensesolution-secret
